@@ -33,6 +33,7 @@ define('ZBX_PAGE_NO_MENU', 1);
 
 $strltype = array();
 $strltype[] = 'log[%';
+$strltype[] = 'logrt[%';
 $strltype[] = 'eventlog[%';
 $strltype[] = 'snmptraps';
 
@@ -203,6 +204,7 @@ if(isset($_REQUEST['sform'])){
 						' AND f.triggerid = t.triggerid '.
 						' AND i.value_type IN ('.ITEM_VALUE_TYPE_LOG.' , '.ITEM_VALUE_TYPE_TEXT.', '.ITEM_VALUE_TYPE_STR.')'.
 						' AND i.key_ LIKE \''.$matchkey.'\'';
+
 		$res = DBselect($sql);
 		while($rows = DBfetch($res)){
 			$description = $rows['description'];
